--- a/es.css
+++ b/es.css
@@ -3,7 +3,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     font-size: large;
     color: black;
-    background-color: beige;
+    background-color: red;
 }
 
 .container{
